# Revenue-Intelligence-Platform-End-to-End-Analytics-ML-System

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Makefile  README.md  README.pt-BR.md  README.pt-PT.md  SECURITY.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  change_request.yml  config.yml  documentation_request.yml  feature_request.md  feature_request.yml  operational_change.yml
.github/workflows/: ci.yml  dbt-docs.yml
analytics/: __init__.py  business_metrics.py  health_checks.py  kpi_metrics.py  serving_store.py
api/: __init__.py  main.py
app/: dashboard_data.py  dashboard_i18n.py  dashboard_metrics.py  streamlit_app.py
app/ui/: __init__.py  primitives.py
app/views/: __init__.py  dashboard_views.py
contracts/: __init__.py  data_contract.py
dashboard/: __init__.py  app.py  charts.py  components.py  content.py  data_access.py  views.py
dashboard/demo_assets/gold/: business_kpis.metadata.json  customer_360.metadata.json  kpi_monthly_revenue.metadata.json
dashboard/pages/: 01_Customer_Health.py  02_Operations.py  03_Run_History.py
data/processed/: metrics_report.json
dbt/: README.md  dbt_project.yml
dbt/models/: exposures.yml  sources.yml
dbt/models/marts/: schema.yml
dbt/models/marts/action/: action_priority_board.sql
dbt/models/marts/finance/: channel_semantic_metrics.sql  portfolio_semantic_metrics.sql
dbt/models/staging/: stg_recommendations.sql  stg_scored_customers.sql  stg_unit_economics.sql
dbt/profiles/: profiles.yml.example
dbt/tests/: channel_semantic_metrics_non_negative.sql  high_churn_risk_pct_in_range.sql  portfolio_semantic_metrics_has_single_row.sql
docs/: README.md  architecture.md  commit-convention.md  dataset_source.md  deprecation_policy.md  environments.md  hiring_review.md  incident_playbooks.md  merge_policy.md  onboarding.md  release_process.md  repository_structure.md  runbook.md  runtime_surfaces.md  sql_examples.md  staff_upgrade_master_issue.md  troubleshooting_matrix.md
docs/adr/: 0001-batch-first-system-of-record.md  0002-sqlite-default-warehouse.md  0003-streamlit-consumes-artifacts.md  README.md
docs/issues/: 01_container_smoke_and_ci_artifacts.md  02_sqlite_integration_validation.md  03_raw_dataset_metadata_and_freshness.md  04_backfill_window_cli.md  05_extend_governed_contract_surface.md  06_package_boundary_cleanup.md  07_release_and_operational_change_discipline.md  README.md  github_issue_templates.md  project_board.md
docs/releases/: v1.1.0.md  v1.2.0.md  v1.3.0.md  v1.3.1.md  v1.3.2.md  v1.3.3.md
metrics/: semantic_metrics.json
models/: __init__.py  churn_model.py  revenue_forecasting.py
orchestration/: README.md
orchestration/airflow/dags/: revenue_intelligence_platform_dag.py
orchestration/prefect/: revenue_intelligence_deployment.yaml
pipelines/: __init__.py  bootstrap_sample_data.py  common.py  feature_pipeline.py  ingestion_pipeline.py  transformation_pipeline.py
ridp/: __init__.py  cli.py  config.py  dashboard_launcher.py  dev_tasks.py
scripts/: capture_dashboard_screenshot.ps1  export_partner_payload.py  precommit_local.py  smoke_api.py  smoke_dashboard.py  smoke_dbt_sqlite.py  smoke_downstream_sql.py  smoke_partner_payload.py  smoke_processed_exports.py  smoke_support.py  ui_snapshot.py
services/: __init__.py
services/api/: __init__.py  main.py
src/: alerting.py  analytics.py  api_cli.py  app_cli.py  artifact_validation.py  business_rules.py  config.py  data_contract.py  exceptions.py  governance.py  ingestion.py  io_utils.py  logging_utils.py  metrics.py  model_registry.py  modeling.py  monitoring.py  orchestration.py  persistence.py  pipeline.py  prefect_flow.py  quality.py  recommendation.py  reporting.py  runtime.py  semantic_metrics.py  transformation.py  warehouse.py  writeback.py
tests/: __init__.py  dashboard_test_utils.py  test_api.py  test_artifact_validation.py  test_business_logic.py  test_cli.py  test_config.py  test_dashboard.py  test_dashboard_ui_snapshot.py  test_dbt_hardening.py  test_dbt_project.py  test_operational_assets.py  test_output_contract.py  test_partner_payload.py  test_pipelines.py  test_platform_extensions.py  test_reporting.py  test_repository_governance.py  test_runtime_reliability.py  test_warehouse_consumption.py
tests/fixtures/dashboard_demo/gold/: business_kpis.csv  customer_360.csv  kpi_monthly_revenue.csv
tests/fixtures/dashboard_demo/runs/: demo-run-001.json  demo-run-002.json
tests/snapshots/: dashboard_ui_snapshot.json
