[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revenue-intelligence-platform"
version = "1.2.0"
description = "Production-minded batch revenue intelligence pipeline with analytics, ML and governance assets."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Samuel Maia" }]

[tool.setuptools]
packages = ["src", "contracts", "contracts.v1", "services", "services.api", "api"]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
(
  /(
      \.venv
    | __pycache__
    | data
  )/
)
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "__pycache__", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "data"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
exclude = '(^data/|^\.venv/)'

[[tool.mypy.overrides]]
module = [
  "plotly.*",
  "pandas",
  "pandas.*",
  "sklearn.*",
  "joblib",
  "sqlalchemy",
  "sqlalchemy.*",
  "streamlit",
  "matplotlib.*",
  "seaborn.*",
  "prefect",
  "prefect.*",
]
ignore_missing_imports = true
