[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revenue-intelligence-platform"
version = "1.2.0"
description = "Production-minded batch revenue intelligence pipeline with analytics, ML and governance assets."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Samuel Maia" }]
license = { text = "MIT" }
dependencies = [
  "fastapi==0.115.12",
  "joblib==1.4.2",
  "matplotlib==3.10.1",
  "numpy==2.1.3",
  "pandas==2.2.3",
  "plotly==6.0.0",
  "pydantic==2.11.2",
  "scikit-learn==1.6.1",
  "seaborn==0.13.2",
  "streamlit==1.43.1",
  "uvicorn==0.34.0",
]

[project.optional-dependencies]
dev = [
  "black[jupyter]==24.10.0",
  "build==1.2.2.post1",
  "httpx==0.28.1",
  "isort==5.13.2",
  "mypy==1.11.2",
  "pre-commit==4.2.0",
  "pytest==8.3.5",
  "ruff==0.6.9",
]

[tool.setuptools]
packages = ["src", "contracts", "contracts.v1", "services", "services.api", "api"]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
(
  /(
      \.venv
    | \.dbt-venv
    | __pycache__
    | data
  )/
)
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", ".dbt-venv", "__pycache__", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", ".dbt-venv", "data"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
exclude = '(^data/|^\.venv/|^\.dbt-venv/)'

[[tool.mypy.overrides]]
module = [
  "plotly.*",
  "pandas",
  "pandas.*",
  "sklearn.*",
  "joblib",
  "sqlalchemy",
  "sqlalchemy.*",
  "fastapi",
  "fastapi.*",
  "pydantic",
  "pydantic.*",
  "streamlit",
  "matplotlib.*",
  "seaborn.*",
  "prefect",
  "prefect.*",
]
ignore_missing_imports = true
